Fixed spacing for bouncing ball

--- a/src/basketball/bball.css
+++ b/src/basketball/bball.css
@@ -27,45 +27,20 @@
   overflow: hidden;
   border: 2px solid black;
 }
+@media screen and (min-width: 320px) and (max-width: 600px) {
+  .name-style {
+    display: none;
+  }
+}
 
-@media screen and (min-width: 320px) and (max-width: 675px) {
+@media screen and (min-width: 601px) and (max-width: 675px) {
    .name-style {
     padding-top: 175px;
+  }
+  .header-container {
+    padding-left: 100px;
   }
 }
 
 @media screen and (min-width: 676px) {
-}
-
-.stripes {
-  position:relative;
-  left:100px;
-  top:50px;
-  width:100px;
-  height:100px;
-  background:#f57c33;
-  border-radius:50px;
-  overflow:hidden;
-  border: 2px solid black;
-}
-
-
-.stroke-one {
-  border-radius: 50px;
-  border: 2px solid black;
-  position:absolute;
-  width: 100px;
-  height: 150px;
-  right: 10px;
-  right: 60px;
-  bottom: -25px;
-}
-.stroke-two {
-  
-}
-.stroke-three {
-  
-}
-.stroke-four {
-  
 }
